# trafalgar_github_site

./: README.md  _config.yml
gaussian_cox_process_paper_code/: :w  README.md  __init__.py  basis_function_obs_noise.py  classification_diagrams.py  classification_diagrams_2d.py  data.py  empirical_coverage.py  experiment_graphs.py  exposition_graphs.py  main.py  method.py  plot.py  pp2.py  predictive_expected_likelihood.py  pyproject.toml
gaussian_cox_process_paper_code/datasets/: README.txt  spatial_2d.py  synth_1.py  synth_2.py  synth_3.py  william.rar
gaussian_cox_process_paper_code/mcmc/: attempt_1.py  intensity_samples_mcmc_1d_synth_1.npy  intensity_samples_mcmc_1d_synth_1_inputs.npy  intensity_samples_mcmc_1d_synth_2.npy  intensity_samples_mcmc_1d_synth_2_inputs.npy  intensity_samples_mcmc_1d_synth_3.npy  lgcp_mcmc.py  lgcp_mcmc_1d.py  (+3 more)
mercergp/: ..html  MGP.py  README.md  __init__.py  builders.py  dependencies.txt  eigenvalue_gen.py  kernels.py  likelihood.py  likelihood_refit.py  multitask.py  posterior_sampling.py  special.py
ortho/: .gitignore  README.md  __init__.py  basis_functions.py  builders.py  inverse_laplace.py  lanczos.py  matrix.txt  measure.py  multivariate.py  multivariate_orthogonal_polynomial_notes.txt  orthopoly.py  orthopoly.s  polynomials.py  pyproject.toml  roots.py  special.py  utils.py  vandermonde.py
ortho/test/: 1  experiment_9.py  test_basis_functions.py  test_builders.py  test_inverse_laplace.py  test_measure.py  test_multivariate.py  test_orthopoly.py  test_polynomials.py  test_roots.py  test_utils.py  test_vandermonde.py
(+10488 files in other folders)
